--- a/resources/assets/sass/views/credits.scss
+++ b/resources/assets/sass/views/credits.scss
@@ -27,6 +27,23 @@ Table of Contents End
 //}
 
 .credits-page-content {
+    .step {
+        margin-right: 15px;
+        color: $secondaryColor;
+        font-weight: 500;
+        font-size: 3.5rem;
+
+        @media screen and (max-width: $screen-xs-max) {
+            margin-right: 10px;
+            font-size: 2.3rem;
+        }
+    }
+
+    .stepTitle {
+        @media screen and (max-width: $screen-xs-max) {
+            font-size: 1.9rem;
+        }
+    }
 
     p {
         color: #3C4857;
@@ -376,7 +393,7 @@ Table of Contents End
 
     .block .table-rose {
         /*background: linear-gradient(60deg, #ec407a, #c2185b);*/
-        background: linear-gradient(60deg, #ef4f2b, #e73911);
+        background: linear-gradient(60deg, #ce6047, #ce4f32);
         border-radius: 6px;
         box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(233, 30, 99, 0.2);
     }
@@ -428,30 +445,31 @@ Table of Contents End
     /* btn-rose */
     .btn.btn-rose {
         color: #FFFFFF;
-        background-color: #ef4f2b;
-        border-color: #ef4f2b;
-        box-shadow: 0 2px 2px 0 rgba(233, 30, 99, 0.14), 0 3px 1px -2px rgba(233, 30, 99, 0.2), 0 1px 5px 0 rgba(233, 30, 99, 0.12);
+        background-color: #ce5439;
+        border-color: #ce5439;
+        //box-shadow: 0 2px 2px 0 rgba(233, 30, 99, 0.14), 0 3px 1px -2px rgba(233, 30, 99, 0.2), 0 1px 5px 0 rgba(233, 30, 99, 0.12);
     }
 
     .btn.btn-rose:focus,
     .btn.btn-rose:active,
     .btn.btn-rose:hover {
-        box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(233, 30, 99, 0.2);
+        //box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(233, 30, 99, 0.2);
     }
 
 
     /* btn-primary */
     .btn.btn-primary {
         color: #FFFFFF;
-        background-color: #ef4f2b;
-        border-color: #ef4f2b;
-        box-shadow: 0 2px 2px 0 rgba(156, 39, 176, 0.14), 0 3px 1px -2px rgba(156, 39, 176, 0.2), 0 1px 5px 0 rgba(156, 39, 176, 0.12);
+        background-color: #686d82;
+        //border-color: #ce5439;
+        //box-shadow: 0 2px 2px 0 rgba(156, 39, 176, 0.14), 0 3px 1px -2px rgba(156, 39, 176, 0.2), 0 1px 5px 0 rgba(156, 39, 176, 0.12);
     }
 
     .btn.btn-primary:focus,
     .btn.btn-primary:active,
     .btn.btn-primary:hover {
-        box-shadow: 0 14px 26px -12px rgba(156, 39, 176, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(156, 39, 176, 0.2);
+        background-color: #595e72;
+        //box-shadow: 0 14px 26px -12px rgba(156, 39, 176, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(156, 39, 176, 0.2);
     }
 
 
@@ -519,8 +537,8 @@ Table of Contents End
     .btn.btn-white {
         color: #3C4857;
         background-color: #fff;
-        border-color: #fff;
-        box-shadow: 0 2px 2px 0 rgba(153, 153, 153, 0.14), 0 3px 1px -2px rgba(153, 153, 153, 0.2), 0 1px 5px 0 rgba(153, 153, 153, 0.12);
+        //border-color: #fff;
+        //box-shadow: 0 2px 2px 0 rgba(153, 153, 153, 0.14), 0 3px 1px -2px rgba(153, 153, 153, 0.2), 0 1px 5px 0 rgba(153, 153, 153, 0.12);
     }
 
     .btn.btn-white:focus,
@@ -591,6 +609,10 @@ Table of Contents End
         color: #ea7961;
     }
 
+    .paymentMethodsListItem.selected {
+        background-color: #ce5439;
+        color: #fff;
+    }
 
     @media screen and (max-width: $screen-xs-max) {
         .block-pricing .block-caption {
