fixes && new feature to show profile completion

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -40,6 +40,7 @@
 @import "components/spinner";
 @import "components/confirm-dialog";
 @import "components/scroll-top-button";
+@import "components/low-profile-completion";
 
 // Modules
 @import "modules/online-users";
