--- a/resources/assets/sass/search-bar.scss
+++ b/resources/assets/sass/search-bar.scss
@@ -65,7 +65,7 @@
             }
 
             &.submit {
-                width: 15%;
+                width: 70px;
                 position: absolute;
                 right: 10px;
                 bottom: 10px;
