--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -117,3 +117,25 @@
     }
   }
 }
+
+img.blurred {
+  filter: blur(8px);
+}
+
+.imageModal {
+  .modal-dialog {
+    position: relative;
+
+    .nonPayingUserMessage {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+  }
+}
