--- a/resources/assets/sass/components/button.scss
+++ b/resources/assets/sass/components/button.scss
@@ -27,6 +27,20 @@
     text-overflow: ellipsis;
     box-shadow: 0 1px 2px 0 rgba(45, 49, 66, 0.25);
 
+    &--tall {
+        padding: 20px 20px;
+    }
+
+    &--highlighted {
+        .Button__content {
+            font-size: 4rem !important;
+
+            @media screen and (max-width: $screen-xs-max) {
+                font-size: 2.7rem !important;
+            }
+        }
+    }
+
     &.centered {
         margin-left: initial;
     }
