--- a/resources/assets/sass/components/image-modal.scss
+++ b/resources/assets/sass/components/image-modal.scss
@@ -61,9 +61,26 @@
     width: 40px;
     height: 40px;
     opacity: 0.4;
+    z-index: 100;
 
     &:hover {
       opacity: 0.6;
+    }
+  }
+
+  .modal-dialog {
+    position: relative;
+
+    .nonPayingUserMessage {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
   }
 }
