--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -96,8 +96,9 @@
 
         width: 110px;
         height: 45px;
-        border-radius: 50%;
+        border-radius: 6px;
         background-color: lighten($secondaryColor, 5%);
+        box-shadow: 1px 2px 2px rgba(0,0,0,0.3);
 
         cursor: pointer;
 
