--- a/resources/assets/sass/views/edit-profile.scss
+++ b/resources/assets/sass/views/edit-profile.scss
@@ -80,13 +80,13 @@
     }
 
     label {
-        color: $tertiaryColor;
+        color: #734e4e;
     }
 
     table {
         th {
             //font-size: 14px;
-            color: $mainColor;
+            color: #734e4e;
         }
 
         td.action-buttons {
