--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -174,7 +174,7 @@
         position: relative;
         border-radius: 2px 2px 0 0;
         padding: 10px;
-        background-color: $tertiaryColor;
+        //background-color: $tertiaryColor;
         background: linear-gradient(90deg, #312c2c 13%, #584747 100%);
 
         &__wrapper {
@@ -183,7 +183,8 @@
         }
 
         &__notify {
-            background-color: #b53d22;
+            //background-color: #b53d22;
+            background: linear-gradient(90deg, darken($secondaryColor, 20%) 13%, $secondaryColor 100%);
         }
 
         &__onlineBar {
