--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -61,10 +61,10 @@
     border-radius: 0;
     box-shadow: 0 4px 6px rgba(0,0,0,0.25);
 
-    background: linear-gradient(90deg, #312c2c 13%, lighten(#312c2c, 7%) 100%);
+    background: linear-gradient(90deg, #312c2c 13%, lighten(#312c2c, 3%) 100%);
 
     .navbar-toggle {
-        margin-top: 17px;
+        margin-top: 8px;
 
         &:focus,
         &:hover {
@@ -88,14 +88,14 @@
         display: none;
         position: absolute;
         left: 534px;
-        top: 21px;
+        top: 10px;
 
         @media screen and (max-width: $screen-sm-max) {
             display: block;
         }
 
         @media screen and (max-width: $screen-xs-max) {
-            left: 230px;
+            left: 197px;
         }
     }
 
@@ -189,7 +189,7 @@
 
                 .dropdown-menu {
                     padding: 0;
-                    background-color: #493d3d;
+                    //background-color: #493d3d;
 
                     li {
                         border-bottom: 1px solid lighten(#493d3d, 2%);
@@ -288,7 +288,7 @@
 
             position: absolute;
             left: 12px;
-            top: 25px;
+            top: ($navbarHeight - 33) / 2 + px;
             width: 33px;
             height: 33px;
         }
@@ -318,7 +318,13 @@
 
     > img {
         height: $logoHeight + px;
+
+        @media screen and (max-width: $screen-sm-max) {
+            height: 30px;
+        }
     }
+
+
 }
 
 // change navbar collapse breakpoint
@@ -379,7 +385,7 @@
     .buyCreditsButton {
         position: absolute;
         left: 340px;
-        top: 20px;
+        top: 10px;
 
         width: 150px;
         height: 31px;
@@ -419,7 +425,7 @@
         align-content: center;
         justify-content: center;
         left: 600px;
-        top: 20px;
+        top: 10px;
         font-size: 2rem;
         text-align: center;
         width: 131px;
@@ -439,12 +445,12 @@
         }
 
         @media (max-width: $screen-xs-max) {
-            left: 176px;
+            left: 138px;
 
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            top: 14px;
+            top: 5px;
 
             .searchToggleButtonText {
                 display: none;
