--- a/resources/assets/sass/footer.scss
+++ b/resources/assets/sass/footer.scss
@@ -9,7 +9,7 @@
     position: relative;
     z-index: 5;
     padding: 30px 0;
-    background: linear-gradient(90deg, #312c2c 13%, #584747 100%);
+    background: #312c2c;
     color: $white;
 
     &__logo {
