--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -231,7 +231,7 @@
 
         position: absolute;
         left: -2px;
-        top: 4px;
+        top: 0;
         width: 30px;
         height: 30px;
     }
