styling improvements LP, admin styling, new dashboard widgets

--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -9,7 +9,7 @@
 // colors
 $slate: #4f5d75;
 $slateLight: #617493;
-$dark: #2d3142;
+$dark: #312c2c;
 $tomato: #ef4f2b;
 $tomatoLight: #ee796d;
 $salmon: #f3a69e;
