--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -61,7 +61,7 @@
     border-radius: 0;
     box-shadow: 0 4px 6px rgba(0,0,0,0.25);
 
-    background: #312c2c;
+    background: $navbarBgColor;
 
     .navbar-toggle {
         margin-top: 8px;
