--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -83,7 +83,7 @@ $tileBgColor: $white;
 $tileHeading: (
         'padding': 15,
         'fontSize': 24,
-        'fontColor': darken(#734e4e, 5%),
+        'fontColor': #ce5338,
         'textAlign': center,
         'borderWidth': 2
 );
