--- a/resources/assets/sass/components/tile.scss
+++ b/resources/assets/sass/components/tile.scss
@@ -31,7 +31,7 @@
         padding: 20px map_get($tileBody, padding) + px;
 
         @media (max-width: $screen-sm-max) {
-            padding: 20px 15px;
+            padding: 0 15px 20px 15px;
         }
 
         h4 {
