--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -128,8 +128,8 @@ img.very-blurred {
 }
 
 .searchResultsHeader {
-  position: fixed;
-  top: 49px;
+  position: absolute;
+  bottom: -54px;
   left: 20px;
   z-index: 400;
 
@@ -139,7 +139,7 @@ img.very-blurred {
   color: #fff;
   width: -moz-fit-content;
   width: fit-content;
-  border-radius: 6px;
+  border-radius: 0 0 6px 6px;
   margin: 0 0 20px 0;
   font-size: 2.2rem;
   white-space: nowrap;
@@ -155,6 +155,7 @@ img.very-blurred {
 @media screen and (max-width: $screen-xs-max) {
   .searchResultsHeader {
     font-size: 1.4rem;
+    bottom: -47px;
     left: 0px;
   }
 }
