--- a/public/admin/css/plugins.css
+++ b/public/admin/css/plugins.css
@@ -6348,6 +6348,24 @@ table .action-buttons .btn {
     height: 60px;
     margin-right: 10px;
 }
+
+.innerTableWidgetHeading {
+    padding: 2px 4px;
+    margin: 0;
+    border: 1px solid #2b2b2b;
+    border-radius: 3px 3px 0 0;
+    background-color: #2b2b2b;
+    color: #fff;
+    font-weight: bold;
+}
+
+.innerTableWidgetBody {
+    padding: 2px 4px;
+    margin: 0 0 10px 0;
+    border: 1px solid #888;
+    border-radius: 0 0 3px 3px;
+    background-color: #faebcc;
+}
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
