--- a/public/admin/css/plugins.css
+++ b/public/admin/css/plugins.css
@@ -5934,6 +5934,16 @@ table .action-buttons .btn {
     line-height: 17px;
 }
 
+.convo-tile.conversationId {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2b2b2b;
+    color: #fff;
+    font-weight: bold;
+    font-size: 2rem;
+}
+
 .convo-tile.bot {
     background-color: #635d5c;
 }
@@ -6364,7 +6374,7 @@ table .action-buttons .btn {
     margin: 0 0 10px 0;
     border: 1px solid #888;
     border-radius: 0 0 3px 3px;
-    background-color: #faebcc;
+    background-color: #f3ede2;
 }
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
