improve deactivation && reactivation. Add stats to bots edit, peasant edit, and set highlight of credits based on how many left

--- a/resources/assets/sass/components/confirm-dialog.scss
+++ b/resources/assets/sass/components/confirm-dialog.scss
@@ -1,13 +1,22 @@
-.ConfirmDialog {
-  .dg-btn--cancel {
-    background-color: $secondaryColor;
-    color: $white;
-    border-color: transparent;
-  }
+.ConfirmModal {
+  //.dg-btn--cancel {
+  //  background-color: $secondaryColor;
+  //  color: $white;
+  //  border-color: transparent;
+  //}
+  //
+  //.dg-btn--ok {
+  //  background-color: $tertiaryColor;
+  //  color: $white;
+  //  border-color: transparent;
+  //}
 
-  .dg-btn--ok {
-    background-color: $tertiaryColor;
-    color: $white;
-    border-color: transparent;
+  &__actionButtons {
+    display: flex;
+    flex-direction: row;
+
+    .Button:first-child {
+      margin-left: initial;
+    }
   }
 }
