--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -45,7 +45,8 @@
 // Modules
 @import "modules/online-users";
 @import "modules/user-account";
-@import "modules/shoutbox";
+@import "modules/latest-viewed-profiles";
+@import "modules/latest-viewed-by-profiles";
 
 // Views
 @import "views/articles";
