--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -102,14 +102,14 @@ $userActivityHeading: (
 );
 
 $userActivityProfileImage: (
-        'width': map_get($roundImageDimensions, sm),
-        'height': map_get($roundImageDimensions, sm)
+        'width': 30,
+        'height': 30
 );
 
 // Online-users
 $onlineUsersItem: (
         'textAlign': left,
-        'fontSize': 12,
+        'fontSize': 14,
         'marginBottom': 10,
 );
 
