--- a/resources/assets/sass/modules/online-users.scss
+++ b/resources/assets/sass/modules/online-users.scss
@@ -6,6 +6,16 @@
 //
 // Style guide: Modules.Online Users
 .Online-users {
+    &__heading {
+        .onlineCircle {
+            background-color: #33e23c;
+            width: 14px;
+            height: 14px;
+            border-radius: 50%;
+            margin-left: 10px;
+        }
+    }
+
     &__item {
         display: -webkit-flex;
         display: flex;
@@ -19,24 +29,40 @@
         text-align: map_get($onlineUsersItem, textAlign);
         margin-bottom: map_get($onlineUsersItem, marginBottom) + px;
 
+        text-decoration: none;
+
         &:last-of-type {
             margin-bottom: 0
+        }
+
+        &:hover,
+        &:focus,
+        &:active  {
+            text-decoration: none;
+        }
+
+        &:hover  {
+            background-color: antiquewhite;
         }
     }
 
     &__body {
-        padding: 10px 0;
+        padding: 0 15px 15px;
     }
 
     &__profile-image {
         -webkit-flex: 1 0 0;
         flex: 1 0 0;
         text-align: center;
+        margin-right: 10px;
+        position: relative;
 
         img {
-            width: map_get($roundImageDimensions, xs) + px;
-            height: map_get($roundImageDimensions, xs) + px;
-            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            border-radius: 2px;
+            object-fit: cover;
+            display: block;
         }
     }
 
@@ -45,11 +71,72 @@
         flex: 4 0 0;
         text-align: left;
 
-        font-size: map_get($onlineUsersItem, fontSize) + px;
-        a {
-            color: #333;
+        color: #555;
+        font-size: 16px;
+        font-weight: 500;
+        text-decoration: none;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        &:hover,
+        &:focus,
+        &:active {
             text-decoration: none;
         }
+    }
+}
+
+.blinking {
+    -webkit-animation: 2s blink ease infinite;
+    -moz-animation: 2s blink ease infinite;
+    -o-animation: 2s blink ease infinite;
+    animation: 2s blink ease infinite;
+
+}
+
+@keyframes blink {
+    from, to {
+        opacity: 0;
+    }
+    80% {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes blink {
+    from, to {
+        opacity: 0;
+    }
+    80% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes blink {
+    from, to {
+        opacity: 0;
+    }
+    80% {
+        opacity: 1;
+    }
+}
+
+@-ms-keyframes blink {
+    from, to {
+        opacity: 0;
+    }
+    80% {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes blink {
+    from, to {
+        opacity: 0;
+    }
+    80% {
+        opacity: 1;
     }
 }
 
