--- a/resources/assets/sass/modules/online-users.scss
+++ b/resources/assets/sass/modules/online-users.scss
@@ -12,7 +12,7 @@
             width: 14px;
             height: 14px;
             border-radius: 50%;
-            margin-left: 10px;
+            margin-right: 10px;
         }
     }
 
@@ -51,8 +51,6 @@
     }
 
     &__profile-image {
-        -webkit-flex: 1 0 0;
-        flex: 1 0 0;
         text-align: center;
         margin-right: 10px;
         position: relative;
@@ -67,8 +65,6 @@
     }
 
     &__username {
-        -webkit-flex: 4 0 0;
-        flex: 4 0 0;
         text-align: left;
 
         color: #555;
