--- a/resources/assets/sass/modules/latest-viewed-by-profiles.scss
+++ b/resources/assets/sass/modules/latest-viewed-by-profiles.scss
@@ -1,4 +1,31 @@
 .LatestViewedBy {
+    &__bodyWrapper {
+        position: relative;
+        margin-bottom: map_get($onlineUsersItem, marginBottom) + px;
+        &:last-of-type {
+            margin-bottom: 0
+        }
+    }
+
+    &__sendMessage {
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+        cursor: pointer;
+
+        .material-icons {
+            color: $secondaryColor;
+            font-size: 21px;
+        }
+
+        &:hover {
+            .material-icons {
+                color: darken($secondaryColor, 8%);
+                font-size: 23px;
+            }
+        }
+    }
+
     &__item {
         display: -webkit-flex;
         display: flex;
@@ -67,6 +94,10 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+
+        @media screen and (min-width: $screen-sm-min) {
+            width: 127px;
+        }
 
         &:hover,
         &:focus,
