--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -6,6 +6,24 @@
 //
 // Style guide: Components.User Summary
 .UserSummary {
+    &__seeProfile {
+        font-size: 12px;
+        position: absolute;
+        bottom: 0px;
+        background-color: #615757;
+        right: 0px;
+        color: #fff;
+        padding: 2px 11px;
+        font-weight: 500;
+        border-radius: 2px 0 2px 0;
+
+        &:hover {
+            text-decoration: none;
+            color: #fff;
+            background-color: $secondaryColor;
+        }
+    }
+
     &__footer {
        padding: 0;
     }
