--- a/resources/assets/sass/modules/online-users.scss
+++ b/resources/assets/sass/modules/online-users.scss
@@ -80,7 +80,7 @@
 
     &__profile-image {
         text-align: center;
-        margin-right: 10px;
+        margin-right: 5px;
         position: relative;
 
         img {
@@ -89,6 +89,11 @@
             border-radius: 2px;
             object-fit: cover;
             display: block;
+
+            @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+                width: 53px;
+                height: 53px;
+            }
         }
     }
 
@@ -103,7 +108,12 @@
         overflow: hidden;
         text-overflow: ellipsis;
 
-        @media screen and (min-width: $screen-sm-min) {
+        @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+            font-size: 15px;
+            width: 93px;
+        }
+
+        @media screen and (min-width: $screen-lg-min) {
             width: 127px;
         }
 
