update home view to use user summare & extend user summary to be able to show about me

--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -24,6 +24,14 @@
         }
     }
 
+    &__aboutMe {
+        padding: 20px 10px;
+        font-size: 1.6rem;
+        font-style: italic;
+        margin-top: 20px;
+        border-top: 1px solid #eee;
+    }
+
     &__footer {
        padding: 0;
     }
