--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -175,6 +175,7 @@
 
     &__userInfo {
         text-align: center;
+        width: 100%;
 
         &__primary {
             display: inline-block;
