--- a/public/lps/t1/assets/css/material-bootstrap-wizard.css
+++ b/public/lps/t1/assets/css/material-bootstrap-wizard.css
@@ -343,7 +343,7 @@ h2.title {
     width: 100%; }
   .wizard-card .tab-content {
     min-height: 340px;
-    padding: 20px 15px; }
+    padding: 20px; }
   .wizard-card .wizard-footer {
     padding: 0 15px; }
     .wizard-card .wizard-footer .checkbox {
@@ -362,7 +362,7 @@ h2.title {
   .wizard-card .info-text {
     text-align: center;
     font-weight: 300;
-    margin: 10px 0 30px; }
+    margin: 10px 0 10px; }
   .wizard-card .choice {
     text-align: center;
     cursor: pointer;
@@ -374,7 +374,7 @@ h2.title {
       width: 130px;
       border-radius: 50%;
       color: #999999;
-      margin: 0 auto 20px;
+      margin: 0 auto;
       border: 4px solid #CCCCCC;
       /*transition: all 0.2s;
       -webkit-transition: all 0.2s;*/ }
@@ -1399,4 +1399,9 @@ fieldset[disabled] .checkbox, fieldset[disabled] .checkbox input[type=checkbox],
     padding-right: 5px; }
 
   .btn-wd {
-    min-width: 140px; } }
+    min-width: 140px; }
+
+  .sexSelectionContainer {
+    margin-top: 40px;
+  }
+}
