Public chat initial design

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -41,6 +41,7 @@
 @import "components/confirm-dialog";
 @import "components/scroll-top-button";
 @import "components/low-profile-completion";
+@import "components/public-chat";
 
 // Modules
 @import "modules/online-users";
