--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13021,7 +13021,15 @@ small.form-error {
 }
 
 .PublicChat__panelFooter .btn {
-  background-color: #bf5329;
+  color: #fff;
+  border-radius: 6px;
+  background-color: #d3654c;
+  -webkit-box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.PublicChat__panelFooter .btn:hover {
+  background-color: #ce5338;
 }
 
 .PublicChat__panelFooter textarea {
