--- a/resources/assets/sass/components/public-chat.scss
+++ b/resources/assets/sass/components/public-chat.scss
@@ -50,7 +50,15 @@
         border-top: 1px solid $input-border;
 
         .btn {
-            background-color: $brand-danger;
+            color: #fff;
+            border-radius: 6px;
+            background-color: #d3654c;
+            -webkit-box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
+            box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
+
+            &:hover {
+                background-color: #ce5338;
+            }
         }
 
         textarea {
