--- a/resources/assets/sass/components/confirm-dialog.scss
+++ b/resources/assets/sass/components/confirm-dialog.scss
@@ -1,15 +1,15 @@
 .ConfirmModal {
-  //.dg-btn--cancel {
-  //  background-color: $secondaryColor;
-  //  color: $white;
-  //  border-color: transparent;
-  //}
-  //
-  //.dg-btn--ok {
-  //  background-color: $tertiaryColor;
-  //  color: $white;
-  //  border-color: transparent;
-  //}
+  .dg-btn--cancel {
+    background-color: $secondaryColor;
+    color: $white;
+    border-color: transparent;
+  }
+
+  .dg-btn--ok {
+    background-color: $tertiaryColor;
+    color: $white;
+    border-color: transparent;
+  }
 
   &__actionButtons {
     display: flex;
