--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -40,7 +40,7 @@
         @include roundImage;
 
         position: absolute;
-        top: 6px;
+        top: 0;
         left: 0;
         width: 24px;
         height: 24px;
